<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsFragment"
    android:orientation="vertical"
    android:background="@color/white"
    >
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="20dp"
        >
        <TextView
            android:id="@+id/text_api"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/API"
            android:textSize="30sp"
            />
    </RelativeLayout>

    <RelativeLayout
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginHorizontal="20dp"
        >

        <EditText
            android:id="@+id/edit_api"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:hint="@string/edit_api"
            tools:ignore="TouchTargetSizeCheck"
            android:background="@drawable/rounded_corner"
            android:padding="8dp"
            android:layout_toStartOf="@id/confirm"
            android:textSize="20sp"
            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerInParent="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/rounded_corner"
            android:text="@string/confirm"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:elevation="10dp"/>
    </RelativeLayout>


</LinearLayout>